# meta-credit-dynamics

./: .gitignore  LICENSE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
capitalmarket/capitalselector/: __init__.py  builder.py  claims.py  core.py  cpu_impl.py  cuda_impl.py  cuda_state.py  determinism.py  inhabitants.py  interfaces.py  kernel_semantics.py  kernel_semantics_cuda.py  ledger.py  lifecycle_cuda.py  phase_i_bucket.py  phase_i_events.py  phase_i_state.py  phase_ii_events.py  phase_ii_state.py  population_manager.py  runtime.py  selector_policy.py  settlement.py  world_burndown.py
capitalmarket/capitalselector/experiments/: __init__.py  phase_ii_evaluation.py  run_phase_i.py  run_phase_ii.py  seeds_phase_i.json
capitalmarket/capitalselector/worlds/: __init__.py  flip_cluster_world.py  (+4 more)
docs/v1/: README.md  architecture.md  interface.md  math-v1.md  phase_f_final_fazit.md  phase_g_final_fazit.md
docs/v2/: README.md  architecture.md  math-v2.md  release_notes_v0.7.20.md
docs/v3/: architecture_phase_ii.md  impl_spec_phase_ii.md  math_selector_v3.md  phase_ii_prompt_seq.md
notebooks/: team_demo.ipynb
scripts/: publish_release.sh  publish_whitelist.txt
tests/: conftest.py  test_due_curve_update.py  test_event_summary_mapping.py  test_issue10_phase_ii_additional_gaps.py  test_liquidity_mismatch_detection.py  test_phase_ii_cpu_cuda_parity.py  test_phase_ii_determinism.py  test_phase_ii_evaluation_protocol.py  test_phase_ii_event_mapping.py  test_strategic_credit_behavior.py  test_world_action_coupling.py  test_world_action_validation.py
(+3 files in other folders)
